Fix spacing between navbar symbols and links.

--- a/software/web/src/scss/main.scss
+++ b/software/web/src/scss/main.scss
@@ -172,7 +172,7 @@ body {
 }
 
 .sidebar .nav-link .feather {
-  margin-right: 4px;
+  margin-right: 8px;
   color: #333;
 }
 
